# case_redes_automotivas

./: README.md  main.py  pyproject.toml
data/processed/: lojas_unificadas_limpas.csv
data/raw/: CONTINENTAL.xlsx  MICHELIN.xlsx  bosch_service.xlsx  bridgestone.xlsx  pirelli.xlsx  speedmax.xlsx
notebooks/: 01_unificacao_e_limpeza.ipynb  02_analise_exploratoria.ipynb  03_analise_espacial.ipynb  heatmap_densidade.html
